force-app/main/default/objects/Adoption_Metric__c/Adoption_Metric__c.object-meta.xml
<CustomObject>
    <description>Used for tracking adoption metrics of sales users.
DEPRECATION CANDIDATE!!</description>
    <label>Adoption Metric</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Adoption Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>