force-app/main/default/objects/Adoption_Metric__c/fields/No_of_Newbiz_cross_sale__c.field-meta.xml
<CustomField>
    <fullName>No_of_Newbiz_cross_sale__c</fullName>
    <description>The number of new business and cross sale opportunities created</description>
    <label>No of Newbiz &amp; cross sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>