force-app/main/default/objects/Adoption_Metric__c/fields/No_of_overdue_opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_overdue_opportunities__c</fullName>
    <label>No of overdue opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>