force-app/main/default/objects/Adoption_Metric__c/fields/No_of_Renewal_Upsale__c.field-meta.xml
<CustomField>
    <fullName>No_of_Renewal_Upsale__c</fullName>
    <description>The number of renewal and upsale opportunities created</description>
    <label>No of Renewal &amp; Upsale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>