force-app/main/default/objects/Adoption_Metric__c/fields/No_of_stalled_opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_stalled_opportunities__c</fullName>
    <description>Number of opportunities stalled
BA &gt; 15 days in stage
MA &gt; 30 days in stage
KA/LA &gt; 45 days in stage</description>
    <label>No of stalled opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>