force-app/main/default/objects/Adoption_Metric__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>The Segment of the sales rep</description>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>